# goit-pythonweb-hw-12

./: .coverage  .gitignore  main.py  pyproject.toml  test.db
docs/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 0b1063a854bf_user_model_was_added.py  0ed0b5406f7d_refresh_token_was_added_to_user_model.py  2fb059646f52_user_model_was_changed.py  3caeba012678_is_confirmed_column_was_added_to_user.py  968348b7d1e9_user_relation_was_added_to_contact.py  b68c50f1d28b_init.py  e5954a730651_init.py  ff0104824032_user_model_was_changed.py
src/: schemas.py
src/api/: auth.py  contacts.py  users.py  utils.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/services/: auth.py  contacts.py  email.py  upload_file.py  users.py
src/templates/: verify_email.html
tests/: conftest.py  test_auth_api_integration.py  test_contacts_repository_unit.py  test_contacts_services_unit.py  test_users_api_integration.py  test_users_repository_unit.py  test_users_services_unit.py
